--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!doctype html>
-<meta charset="utf-8">
-<title>My CV</title>
-<style>html,body,iframe{height:100%;width:100%;margin:0;border:0}</style>
-<iframe src="cv.pdf"></iframe>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>My CV</title>
+  <style>
+    html, body, iframe {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      border: 0;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="cv.pdf"></iframe>
+</body>
+</html>
